c_cpp_includes/dtwainx.h

/* Start of DTWAIN functional interface */
/* Check for TWAIN Availability (initialization not necessary) */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsTwainAvailable(VOID_PROTOTYPE);
/* TWAIN Session Management */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsSessionEnabled(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsTwainMsg(MSG* pMsg);
/* General Source functions */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_OpenSource(DTWAIN_SOURCE Source);
DTWAIN_SOURCE  DLLENTRY_DEF      DTWAIN_SelectSource(VOID_PROTOTYPE);
DTWAIN_SOURCE  DLLENTRY_DEF      DTWAIN_SelectDefaultSource(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsSourceAcquiring(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_IsSourceOpen(DTWAIN_SOURCE Source);
/* DTWAIN Range functions */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetAll(DTWAIN_RANGE pArray, LPVOID pVariantLow,LPVOID pVariantUp, LPVOID pVariantStep,LPVOID pVariantDefault,LPVOID pVariantCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetAllLong(DTWAIN_RANGE pArray, LONG lLow,LONG lUp, LONG lStep,LONG lDefault,LONG lCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetAllFloat(DTWAIN_RANGE pArray, DTWAIN_FLOAT dLow,DTWAIN_FLOAT dUp, DTWAIN_FLOAT dStep,DTWAIN_FLOAT dDefault,DTWAIN_FLOAT dCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetAll(DTWAIN_RANGE pArray, LPVOID pVariantLow,LPVOID pVariantUp, LPVOID pVariantStep,LPVOID pVariantDefault,LPVOID pVariantCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetAllLong(DTWAIN_RANGE pArray, LPLONG pVariantLow,LPLONG pVariantUp, LPLONG pVariantStep,LPLONG pVariantDefault,LPLONG pVariantCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetAllFloat(DTWAIN_RANGE pArray, LPDTWAIN_FLOAT pVariantLow,LPDTWAIN_FLOAT pVariantUp, LPDTWAIN_FLOAT pVariantStep,LPDTWAIN_FLOAT pVariantDefault,LPDTWAIN_FLOAT pVariantCurrent );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetValue(DTWAIN_RANGE pArray, LONG nWhich,LPVOID pVariant);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetValueLong(DTWAIN_RANGE pArray, LONG nWhich,LPLONG pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetValueFloat(DTWAIN_RANGE pArray, LONG nWhich,LPDTWAIN_FLOAT pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeIsValid(DTWAIN_RANGE Range, LPLONG pStatus );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetValue(DTWAIN_RANGE pArray, LONG nWhich,LPVOID pVal);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetValueLong(DTWAIN_RANGE pArray, LONG nWhich,LONG Val);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeSetValueFloat(DTWAIN_RANGE pArray, LONG nWhich,DTWAIN_FLOAT Val);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetPos(DTWAIN_RANGE pArray, LPVOID pVariant, LPLONG pPos );
DTWAIN_RANGE   DLLENTRY_DEF      DTWAIN_RangeCreate(LONG nEnumType);
DTWAIN_RANGE   DLLENTRY_DEF      DTWAIN_RangeCreateFromCap(DTWAIN_SOURCE Source, LONG lCapType);
LONG           DLLENTRY_DEF      DTWAIN_RangeGetCount(DTWAIN_RANGE pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetExpValue(DTWAIN_RANGE pArray, LONG lPos, LPVOID pVariant );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetExpValueLong(DTWAIN_RANGE pArray, LONG lPos, LPLONG pVal );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetExpValueFloat(DTWAIN_RANGE pArray, LONG lPos, LPDTWAIN_FLOAT pVal );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeExpand(DTWAIN_RANGE pSource,LPDTWAIN_ARRAY pArray );
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeGetNearestValue(DTWAIN_RANGE pArray, LPVOID pVariantIn,LPVOID pVariantOut, LONG RoundType);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_RangeDestroy(DTWAIN_RANGE pSource);
/* Source UI functions */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsUIControllable(DTWAIN_SOURCE Source);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsUIEnabled(DTWAIN_SOURCE Source);
/* Thumbnail images (TWAIN compliant devices supporting thumbnail images (mostly digital cameras) */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsThumbnailSupported(DTWAIN_SOURCE Source );
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_IsThumbnailEnabled(DTWAIN_SOURCE Source );
/* Showing the UI only (some Sources support this) */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsUIOnlySupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsPrinterEnabled(DTWAIN_SOURCE Source, LONG Printer);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsPrinterSupported(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_RewindPage(DTWAIN_SOURCE Source);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_IsPaperDetectable(DTWAIN_SOURCE Source);
/* Paper sizes */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsPaperSizeSupported(DTWAIN_SOURCE Source, LONG PaperSize);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsPixelTypeSupported(DTWAIN_SOURCE Source, LONG PixelType);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ResetPDFTextElement(DTWAIN_PDFTEXTELEMENT TextElement);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_IsSkipImageInfoError(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_OpenSourcesOnSelect(DTWAIN_BOOL bSet);
DTWAIN_OCRENGINE DLLENTRY_DEF DTWAIN_SelectOCREngine(VOID_PROTOTYPE);
DTWAIN_OCRENGINE DLLENTRY_DEF DTWAIN_SelectDefaultOCREngine(VOID_PROTOTYPE);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_RangeGetPosFloat(DTWAIN_RANGE pArray, DTWAIN_FLOAT Val, LPLONG pPos );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_RangeGetPosLong(DTWAIN_RANGE pArray, LONG Value, LPLONG pPos );
/* load the language resource */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_LoadLanguageResource(LONG nLanguage);