language_bindings/Delphi/dtwain64u.pas

 external 'DTWAIN64U.DLL' name 'DTWAIN_IsPDFSupported';
  function DTWAIN_IsPNGSupported:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsPNGSupported';
  function DTWAIN_IsPaperDetectable(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPaperDetectable';
  function DTWAIN_IsPaperSizeSupported(Source:DTWAIN_SOURCE;PaperSize:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPaperSizeSupported';
  function DTWAIN_IsPatchCapsSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPatchCapsSupported';
  function DTWAIN_IsPatchDetectEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPatchDetectEnabled';
  function DTWAIN_IsPatchSupported(Source:DTWAIN_SOURCE;PatchCode:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPatchSupported';
  function DTWAIN_IsPixelTypeSupported(Source:DTWAIN_SOURCE;PixelType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPixelTypeSupported';
  function DTWAIN_IsPrinterEnabled(Source:DTWAIN_SOURCE;Printer:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPrinterEnabled';
  function DTWAIN_IsPrinterSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsPrinterSupported';
  function DTWAIN_IsSessionEnabled:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsSessionEnabled';
  function DTWAIN_IsSkipImageInfoError(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsSkipImageInfoError';
  function DTWAIN_IsSourceAcquiring(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsSourceAcquiring';
  function DTWAIN_IsSourceOpen(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsSourceOpen';
  function DTWAIN_IsTIFFSupported:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsTIFFSupported';
  function DTWAIN_IsThumbnailEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsThumbnailEnabled';
  function DTWAIN_IsThumbnailSupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsThumbnailSupported';
  function DTWAIN_IsTwainAvailable:DTWAIN_BOOL; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_IsTwainAvailable';
  function DTWAIN_IsTwainMsg(var pMsg:Windows.TMsg):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsTwainMsg';
  function DTWAIN_IsUIControllable(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsUIControllable';
  function DTWAIN_IsUIEnabled(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsUIEnabled';
  function DTWAIN_IsUIOnlySupported(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_IsUIOnlySupported';
  function DTWAIN_LoadCustomStringResources(sLangDLL:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LoadCustomStringResources';
  function DTWAIN_LoadCustomStringResourcesA(sLangDLL:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LoadCustomStringResourcesA';
  function DTWAIN_LoadCustomStringResourcesW(sLangDLL:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LoadCustomStringResourcesW';
  function DTWAIN_LoadLanguageResource(nLanguage:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LoadLanguageResource';
  function DTWAIN_LogMessage(message:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LogMessage';
  function DTWAIN_LogMessageA(message:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LogMessageA';
  function DTWAIN_LogMessageW(message:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_LogMessageW';
  function DTWAIN_OpenSource(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_OpenSource';
  function DTWAIN_OpenSourcesOnSelect(bSet:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_OpenSourcesOnSelect';
  function DTWAIN_RangeCreate(nEnumType:DWORD):DTWAIN_RANGE;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeCreate';
  function DTWAIN_RangeCreateFromCap(Source:DTWAIN_SOURCE;lCapType:DWORD):DTWAIN_RANGE;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeCreateFromCap';
  function DTWAIN_RangeDestroy(pSource:DTWAIN_RANGE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeDestroy';
  function DTWAIN_RangeExpand(pSource:DTWAIN_RANGE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeExpand';
  function DTWAIN_RangeGetAll(pArray:DTWAIN_RANGE;pVariantLow:LPVOID;pVariantUp:LPVOID;pVariantStep:LPVOID;pVariantDefault:LPVOID;pVariantCurrent:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetAll';
  function DTWAIN_RangeGetAllFloat(pArray:DTWAIN_RANGE;var pVariantLow:DTWAIN_FLOAT;var pVariantUp:DTWAIN_FLOAT;var pVariantStep:DTWAIN_FLOAT;var pVariantDefault:DTWAIN_FLOAT;var pVariantCurrent:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetAllFloat';
  function DTWAIN_RangeGetAllFloatString(pArray:DTWAIN_RANGE;dLow:LPWSTR;dUp:LPWSTR;dStep:LPWSTR;dDefault:LPWSTR;dCurrent:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetAllFloatString';
  function DTWAIN_RangeGetAllLong(pArray:DTWAIN_RANGE;pVariantLow:LPLONG;pVariantUp:LPLONG;pVariantStep:LPLONG;pVariantDefault:LPLONG;pVariantCurrent:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetAllLong';
  function DTWAIN_RangeGetCount(pArray:DTWAIN_RANGE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetCount';
  function DTWAIN_RangeGetExpValue(pArray:DTWAIN_RANGE;lPos:DWORD;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetExpValue';
  function DTWAIN_RangeGetExpValueFloat(pArray:DTWAIN_RANGE;lPos:DWORD;var pVal:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetExpValueFloat';
  function DTWAIN_RangeGetExpValueFloatString(pArray:DTWAIN_RANGE;lPos:DWORD;pVal:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetExpValueFloatString';
  function DTWAIN_RangeGetExpValueLong(pArray:DTWAIN_RANGE;lPos:DWORD;pVal:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetExpValueLong';
  function DTWAIN_RangeGetNearestValue(pArray:DTWAIN_RANGE;pVariantIn:LPVOID;pVariantOut:LPVOID;RoundType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetNearestValue';
  function DTWAIN_RangeGetPos(pArray:DTWAIN_RANGE;pVariant:LPVOID;pPos:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetPos';
  function DTWAIN_RangeGetPosFloat(pArray:DTWAIN_RANGE;Val:DTWAIN_FLOAT;pPos:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetPosFloat';
  function DTWAIN_RangeGetPosFloatString(pArray:DTWAIN_RANGE;Val:LPCWSTR;pPos:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetPosFloatString';
  function DTWAIN_RangeGetPosLong(pArray:DTWAIN_RANGE;Value:DWORD;pPos:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetPosLong';
  function DTWAIN_RangeGetValue(pArray:DTWAIN_RANGE;nWhich:DWORD;pVariant:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetValue';
  function DTWAIN_RangeGetValueFloat(pArray:DTWAIN_RANGE;nWhich:DWORD;var pVal:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetValueFloat';
  function DTWAIN_RangeGetValueFloatString(pArray:DTWAIN_RANGE;nWhich:DWORD;pVal:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetValueFloatString';
  function DTWAIN_RangeGetValueLong(pArray:DTWAIN_RANGE;nWhich:DWORD;pVal:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeGetValueLong';
  function DTWAIN_RangeIsValid(Range:DTWAIN_RANGE;pStatus:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeIsValid';
  function DTWAIN_RangeNearestValueFloat(pArray:DTWAIN_RANGE;dIn:DTWAIN_FLOAT;var pOut:DTWAIN_FLOAT;RoundType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeNearestValueFloat';
  function DTWAIN_RangeNearestValueFloatString(pArray:DTWAIN_RANGE;dIn:LPCWSTR;pOut:LPWSTR;RoundType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeNearestValueFloatString';
  function DTWAIN_RangeNearestValueLong(pArray:DTWAIN_RANGE;lIn:DWORD;pOut:LPLONG;RoundType:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeNearestValueLong';
  function DTWAIN_RangeSetAll(pArray:DTWAIN_RANGE;pVariantLow:LPVOID;pVariantUp:LPVOID;pVariantStep:LPVOID;pVariantDefault:LPVOID;pVariantCurrent:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetAll';
  function DTWAIN_RangeSetAllFloat(pArray:DTWAIN_RANGE;dLow:DTWAIN_FLOAT;dUp:DTWAIN_FLOAT;dStep:DTWAIN_FLOAT;dDefault:DTWAIN_FLOAT;dCurrent:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetAllFloat';
  function DTWAIN_RangeSetAllFloatString(pArray:DTWAIN_RANGE;dLow:LPCWSTR;dUp:LPCWSTR;dStep:LPCWSTR;dDefault:LPCWSTR;dCurrent:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetAllFloatString';
  function DTWAIN_RangeSetAllLong(pArray:DTWAIN_RANGE;lLow:DWORD;lUp:DWORD;lStep:DWORD;lDefault:DWORD;lCurrent:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetAllLong';
  function DTWAIN_RangeSetValue(pArray:DTWAIN_RANGE;nWhich:DWORD;pVal:LPVOID):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetValue';
  function DTWAIN_RangeSetValueFloat(pArray:DTWAIN_RANGE;nWhich:DWORD;Val:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetValueFloat';
  function DTWAIN_RangeSetValueFloatString(pArray:DTWAIN_RANGE;nWhich:DWORD;Val:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetValueFloatString';
  function DTWAIN_RangeSetValueLong(pArray:DTWAIN_RANGE;nWhich:DWORD;Val:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RangeSetValueLong';
  function DTWAIN_ResetPDFTextElement(TextElement:DTWAIN_PDFTEXTELEMENT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ResetPDFTextElement';
  function DTWAIN_RewindPage(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_RewindPage';
  function DTWAIN_SelectDefaultOCREngine:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_SelectDefaultOCREngine';
  function DTWAIN_SelectDefaultSource:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_SelectDefaultSource';
  function DTWAIN_SelectOCREngine:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_SelectOCREngine';
  function DTWAIN_SelectOCREngineByName(lpszName:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectOCREngineByName';
  function DTWAIN_SelectOCREngineByNameA(lpszName:PAnsiChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectOCREngineByNameA';
  function DTWAIN_SelectOCREngineByNameW(lpszName:PWideChar):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectOCREngineByNameW';
  function DTWAIN_SelectSource2(hWndParent:HWND;szTitle:LPCWSTR;xPos:DWORD;yPos:DWORD;nOptions:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSource2';
  function DTWAIN_SelectSource2A(hWndParent:HWND;szTitle:PAnsiChar;xPos:DWORD;yPos:DWORD;nOptions:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSource2A';
  function DTWAIN_SelectSource2W(hWndParent:HWND;szTitle:PWideChar;xPos:DWORD;yPos:DWORD;nOptions:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSource2W';
  function DTWAIN_SelectSource:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSource';
  function DTWAIN_SelectSourceByName(lpszName:LPCWSTR):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_SelectSourceByName';
